--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.2",
     "postcss-custom-media": "^11.0.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5.8.3"
