--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@floating-ui/react-dom": "^2.1.2",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.2",
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
     "next": "^15.3.2",
