--- a/package.json
+++ b/package.json
@@ -10,32 +10,33 @@
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.2",
     "@mdx-js/loader": "^3.1.0",
-    "@next/mdx": "^15.3.2",
+    "@next/mdx": "^15.3.1",
     "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
+    "cookie": "^1.0.2",
     "gray-matter": "^4.0.3",
-    "next": "^15.3.2",
+    "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
-    "postcss-preset-env": "^10.1.6",
+    "postcss-preset-env": "^9.6.0",
     "prismjs": "^1.30.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sass": "^1.88.0",
+    "sass": "^1.86.3",
     "sharp": "^0.34.1"
   },
   "devDependencies": {
-    "@csstools/postcss-global-data": "^3.0.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "^15.3.2",
-    "postcss-custom-media": "^11.0.5",
+    "@csstools/postcss-global-data": "^2.1.1",
+    "@types/cookie": "^0.6.0",
+    "@types/node": "^20.17.30",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "eslint": "^9.25.0",
+    "postcss-custom-media": "^10.0.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5.8.3"
   }
