--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.89.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
