--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bardy-michael/portfolio",
   "version": "2.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
