--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.511.0",
     "next": "^15.1.8",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
