--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.3.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/edge-config": "^1.4.0",
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
     "next-mdx-remote": "^5.0.0",
+    "open-graph-scraper": "^6.10.0",
     "postcss": "^8.5.5",
     "postcss-preset-env": "^10.2.3",
     "prismjs": "^1.30.0",
