--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "path": "/api/cron/social-share",
             "schedule": "0 7 * * *"
+        },
+        {
+            "path": "/api/cron/refresh-facebook-token",
+            "schedule": "0 4 */50 * *"
         }
     ]
 }
