--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "path": "/api/cron/refresh-facebook-token",
-            "schedule": "0 4 */50 * *"
+            "schedule": "0 4 20 * *"
         }
     ]
 }
