--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.3",
+    "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@next/mdx": "^15.3.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
+    "drizzle-orm": "^0.44.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
@@ -28,11 +31,13 @@
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.89.2",
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
@@ -40,6 +45,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
+    "@types/ws": "^8.18.1",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
     "fb": "^2.0.0",
