--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "scripts": {
     "dev": "next dev --turbo",
+    "dev-https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -37,6 +38,7 @@
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
     "turndown": "^7.2.0",
+    "web-push": "^3.6.7",
     "ws": "^8.18.2"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
+    "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
