--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Portfolio de Michaël Bardy",
-    "short_name": "Portfolio",
+    "short_name": "occitaweb",
     "description": "Portfolio de Michaël Bardy, développeur web et mobile.",
     "start_url": "/",
     "display": "standalone",
@@ -10,6 +10,7 @@
     "lang": "fr-FR",
     "dir": "ltr",
     "scope": "/",
+    "form_factor": "wide",
     "icons": [
         {
             "src": "\/images\/android-icon-36x36.png",
@@ -46,6 +47,22 @@
             "sizes": "192x192",
             "type": "image\/png",
             "density": "4.0"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "/screenshots/occ-screenshot-wide.png",
+            "sizes": "1278x718",
+            "type": "image/png",
+            "form_factor": "wide",
+            "label": "Page d'accueil"
+        },
+        {
+            "src": "/screenshots/occ-screenshot-mobile.png",
+            "sizes": "374x663",
+            "type": "image/png",
+            "form_factor": "narrow",
+            "label": "Page mobile"
         }
     ]
 }
