--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "scripts": {
     "dev": "next dev --turbo",
-    "dev-https": "next dev --experimental-https",
+    "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,19 +13,19 @@
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.3.3",
+    "@next/mdx": "^15.3.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.44.2",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.515.0",
-    "next": "^15.3.3",
+    "lucide-react": "^0.525.0",
+    "next": "^15.3.4",
     "next-mdx-remote": "^5.0.0",
     "open-graph-scraper": "^6.10.0",
-    "postcss": "^8.5.5",
-    "postcss-preset-env": "^10.2.3",
+    "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.2.4",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -43,14 +43,14 @@
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.6",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.29.0",
-    "eslint-config-next": "^15.3.3",
+    "eslint": "^9.30.0",
+    "eslint-config-next": "^15.3.4",
     "fb": "^2.0.0",
     "postcss-custom-media": "^11.0.6",
     "postcss-flexbugs-fixes": "^5.0.2",
