--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
     "@next/mdx": "^15.3.4",
+    "@react-pdf/renderer": "^4.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@wisp-cms/client": "^0.0.23",
@@ -23,6 +24,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "next-mdx-remote": "^5.0.0",
+    "nodemailer": "^7.0.4",
     "open-graph-scraper": "^6.10.0",
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.2.4",
@@ -43,6 +45,7 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
     "@types/node": "^24.0.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
