feat(social-share): améliorer la publication sur Facebook et LinkedIn avec des vérifications d'erreurs et des métadonnées Open Graph

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --quiet"
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.3",
