--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --quiet"
+    "lint": "next lint --quiet",
+    "clean:deps": "depcheck --config .depcheckrc || echo '⚠️ depcheck erreur ignorée'",
+    "clean:exports": "ts-prune",
+    "clean:check": "npm-check",
+    "clean:eslint": "eslint . --fix",
+    "clean": "npm run clean:deps && npm run clean:exports && npm run clean:check && npm run clean:eslint"
   },
   "dependencies": {
-    "@floating-ui/react-dom": "^2.1.3",
+    "@floating-ui/react-dom": "^2.1.4",
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.3.4",
+    "@next/mdx": "^15.3.5",
     "@react-pdf/renderer": "^4.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
@@ -22,40 +27,38 @@
     "drizzle-orm": "^0.44.2",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
-    "next": "^15.3.4",
+    "next": "^15.3.5",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.4",
     "open-graph-scraper": "^6.10.0",
-    "postcss": "^8.5.6",
-    "postcss-preset-env": "^10.2.4",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-masonry-css": "^1.0.16",
-    "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1",
     "sass": "^1.89.2",
     "sharp": "^0.34.2",
     "turndown": "^7.2.0",
     "web-push": "^3.6.7",
-    "ws": "^8.18.2"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@csstools/postcss-global-data": "^3.0.0",
-    "@types/node": "^24.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@types/node": "^24.0.10",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.30.0",
-    "eslint-config-next": "^15.3.4",
-    "fb": "^2.0.0",
-    "postcss-custom-media": "^11.0.6",
-    "postcss-flexbugs-fixes": "^5.0.2",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.30.1",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-config-next": "^15.3.5",
+    "ts-prune": "^0.10.3",
     "typescript": "^5.8.3"
   }
 }
