--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "npm run clean:deps && npm run clean:exports && npm run clean:check && npm run clean:eslint"
   },
   "dependencies": {
+    "@csstools/postcss-global-data": "^3.0.0",
     "@floating-ui/react-dom": "^2.1.4",
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
@@ -43,8 +44,9 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.30.1",
     "@types/node": "^24.0.10",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.8",
@@ -52,12 +54,13 @@
     "@types/turndown": "^5.0.5",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "depcheck": "^1.4.7",
     "eslint": "^9.30.1",
-    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-config-next": "^15.3.5",
+    "globals": "^16.3.0",
     "ts-prune": "^0.10.3",
     "typescript": "^5.8.3"
   }
