--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.4",
     "open-graph-scraper": "^6.10.0",
+    "postcss-custom-media": "^11.0.6",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
