--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "ts-prune": "^0.10.3",
     "typescript": "^5.8.3"
   }
