--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --quiet",
-    "clean:deps": "depcheck --config .depcheckrc || echo '⚠️ depcheck erreur ignorée'",
+    "clean:deps": "depcheck --config .depcheckrc",
     "clean:exports": "ts-prune",
     "clean:check": "npm-check",
     "clean:eslint": "eslint . --fix",
     "clean": "npm run clean:deps && npm run clean:exports && npm run clean:check && npm run clean:eslint"
   },
   "dependencies": {
-    "@csstools/postcss-global-data": "^3.0.0",
     "@floating-ui/react-dom": "^2.1.4",
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
@@ -32,7 +31,6 @@
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.4",
     "open-graph-scraper": "^6.10.0",
-    "postcss-custom-media": "^11.0.6",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -45,6 +43,7 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@csstools/postcss-global-data": "^3.0.0",
     "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.30.1",
@@ -62,6 +61,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
+    "postcss-custom-media": "^11.0.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^10.2.4",
     "ts-prune": "^0.10.3",
