--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
     "drizzle-orm": "^0.44.2",
+    "google-auth-library": "^10.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
     "next": "^15.3.5",
