--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.3.5",
+    "@next/mdx": "^15.4.1",
     "@react-pdf/renderer": "^4.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@wisp-cms/client": "^0.0.23",
     "classnames": "^2.5.1",
-    "drizzle-orm": "^0.44.2",
+    "drizzle-orm": "^0.44.3",
     "google-auth-library": "^10.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
-    "next": "^15.3.5",
+    "next": "^15.4.1",
     "next-mdx-remote": "^5.0.0",
-    "nodemailer": "^7.0.4",
+    "nodemailer": "^7.0.5",
     "open-graph-scraper": "^6.10.0",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
@@ -38,27 +38,27 @@
     "react-icons": "^5.5.0",
     "remark-gfm": "^4.0.1",
     "sass": "^1.89.2",
-    "sharp": "^0.34.2",
+    "sharp": "^0.34.3",
     "turndown": "^7.2.0",
     "web-push": "^3.6.7",
     "ws": "^8.18.3"
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
-    "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.30.1",
-    "@types/node": "^24.0.10",
+    "@next/eslint-plugin-next": "^15.4.1",
+    "@types/node": "^24.0.14",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/turndown": "^5.0.5",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "depcheck": "^1.4.7",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
