--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bardy-michael/portfolio",
   "version": "2.0.0",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
     "build": "next build",
     "start": "next start",
@@ -18,7 +18,7 @@
     "@joplin/turndown-plugin-gfm": "^1.0.62",
     "@mdx-js/loader": "^3.1.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.4.1",
+    "@next/mdx": "15.4.3",
     "@react-pdf/renderer": "^4.3.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
@@ -28,7 +28,7 @@
     "google-auth-library": "^10.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
-    "next": "^15.4.1",
+    "next": "15.4.3",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.5",
     "open-graph-scraper": "^6.10.0",
@@ -46,19 +46,20 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.0.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/eslint-plugin-next": "^15.4.1",
-    "@types/node": "^24.0.14",
+    "@next/eslint-plugin-next": "15.4.3",
+    "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@types/turndown": "^5.0.5",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "depcheck": "^1.4.7",
     "eslint": "^9.31.0",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "15.4.3",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.3.0",
@@ -67,5 +68,11 @@
     "postcss-preset-env": "^10.2.4",
     "ts-prune": "^0.10.3",
     "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8",
+      "@types/react-dom": "19.1.6"
+    }
   }
 }
