--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
+    "recharts": "^3.1.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.3",
     "turndown": "^7.2.0",
