--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@bardy-michael/portfolio",
   "version": "2.0.0",
+  "packageManager": "pnpm@10.12.1",
   "scripts": {
     "dev": "next dev --turbopack",
     "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
