--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
     /* Transpilation */
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "module": "esnext",
     "outDir": "./dist",
@@ -53,7 +53,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
