fix: mettre à jour les scripts de lint et supprimer une importation inutile

--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "@bardy-michael/portfolio",
   "version": "2.0.0",
   "packageManager": "pnpm@10.12.1",
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "dev-https": "next dev --experimental-https --experimental-https-key ./certificates/localhost-key.pem --experimental-https-cert ./certificates/localhost.pem",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --quiet",
+    "lint": "eslint . --quiet",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
