--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@joplin/turndown-plugin-gfm": "^1.0.64",
     "@mdx-js/loader": "^3.1.1",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/mdx": "^16.0.8",
+    "@next/mdx": "^16.0.10",
     "@once-ui-system/core": "^1.5.6",
     "@react-pdf/renderer": "^4.3.1",
     "@vercel/analytics": "^1.6.1",
@@ -30,17 +30,17 @@
     "@wisp-cms/client": "^0.0.23",
     "chart.js": "^4.5.1",
     "classnames": "^2.5.1",
-    "drizzle-orm": "^0.44.7",
+    "drizzle-orm": "^0.45.1",
     "google-auth-library": "^10.5.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "lucide-react": "^0.561.0",
+    "next": "16.0.10",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.11",
     "open-graph-scraper": "^6.11.0",
     "prismjs": "^1.30.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "recharts": "^3.5.1",
     "remark-gfm": "^4.0.1",
@@ -52,10 +52,10 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.1.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@next/eslint-plugin-next": "^16.0.8",
+    "@next/eslint-plugin-next": "^16.0.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.10.2",
+    "@types/node": "^25.0.1",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
@@ -66,11 +66,12 @@
     "@typescript-eslint/parser": "^8.49.0",
     "@vitejs/plugin-react": "^5.1.2",
     "depcheck": "^1.4.7",
-    "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.8",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.0.10",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
     "jsdom": "^27.3.0",
     "postcss-custom-media": "^11.0.6",
