--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@joplin/turndown-plugin-gfm": "^1.0.64",
     "@mdx-js/loader": "^3.1.1",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/mdx": "^16.0.10",
-    "@once-ui-system/core": "^1.5.6",
+    "@next/mdx": "16.1.0",
+    "@once-ui-system/core": "^1.5.8",
     "@react-pdf/renderer": "^4.3.1",
     "@sparticuz/chromium-min": "^143.0.0",
     "@vercel/analytics": "^1.6.1",
@@ -35,17 +35,17 @@
     "drizzle-orm": "^0.45.1",
     "google-auth-library": "^10.5.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "lucide-react": "^0.562.0",
+    "next": "16.1.0",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^7.0.11",
     "open-graph-scraper": "^6.11.0",
     "prismjs": "^1.30.0",
-    "puppeteer-core": "^24.33.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "puppeteer-core": "^24.33.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
-    "recharts": "^3.5.1",
+    "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1",
     "sass": "^1.97.0",
     "sharp": "^0.34.5",
@@ -56,23 +56,23 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^3.1.0",
     "@eslint/eslintrc": "^3.3.3",
-    "@next/eslint-plugin-next": "^16.0.10",
+    "@next/eslint-plugin-next": "16.1.0",
     "@sparticuz/chromium": "^143.0.0",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^25.0.1",
+    "@testing-library/react": "^16.3.1",
+    "@types/node": "^25.0.3",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/turndown": "^5.0.6",
     "@types/web-push": "^3.6.4",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.49.0",
-    "@typescript-eslint/parser": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "@vitejs/plugin-react": "^5.1.2",
     "depcheck": "^1.4.7",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
+    "eslint-config-next": "16.1.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
@@ -82,10 +82,10 @@
     "postcss-custom-media": "^11.0.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^10.5.0",
-    "puppeteer": "^24.33.0",
+    "puppeteer": "^24.33.1",
     "ts-prune": "^0.10.3",
     "typescript": "^5.9.3",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.16"
   },
   "pnpm": {
     "overrides": {
